other/b-d/disable-automountserviceaccounttoken/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disable-automountserviceaccounttoken
policies:
- ../disable-automountserviceaccounttoken.yaml
resources:
- resource.yaml
results:
- kind: ServiceAccount
  patchedResource: patchedResource.yaml
  policy: disable-automountserviceaccounttoken
  resources:
  - default
  result: pass
  rule: disable-automountserviceaccounttoken
